--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
             "type": "image/png"
         }
     ],
-    "orientation": "landscape",
+    "orientation": "portrait",
     "start_url": "/",
     "display": "fullscreen",
     "theme_color": "#83F1A8"
